feat: add create item api and it lists per user
